# feup-robo

./: README.md
assignment_2/: .gitignore  readme.md
assignment_2/devel/: .catkin  local_setup.sh
assignment_2/devel/lib/code/: hello
assignment_2/devel/lib/pkgconfig/: code.pc
assignment_2/resources/launchers/: ass_2_launch.launch  ass_2_v_launch.launch
assignment_2/resources/maps/: W.yaml
assignment_2/resources/robots/: ass_2_robot.yaml
assignment_2/src/code/: CMakeLists.txt  hello.cpp  main.cpp  package.xml  robot_script.cpp  robot_script.h
assignment_3/ROBO/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Barracuda-editor.csproj  MacBLAS.csproj  ROBO.sln  csharp_timers.json  iOSBLAS.csproj
assignment_3/ROBO/Assets/: Attacker 1.nn  BIG BRAIN 2.nn  Big Brain 5.nn  Big brain 3.nn  Big brain 4.nn  Defender.prefab  Puck.prefab  RobotBrain 1.nn  RobotBrain 10.nn  RobotBrain 14.nn  RobotBrain 15.nn  RobotBrain 16.nn  RobotBrain 17.nn  RobotBrain 18.nn  RobotBrain 19.nn  RobotBrain 2.nn  RobotBrain 20.nn  RobotBrain 21.nn  RobotBrain 22.nn  RobotBrain 23.nn  RobotBrain 24.nn  RobotBrain 25.nn  RobotBrain 27.nn  RobotBrain 28.nn  RobotBrain 29.nn  RobotBrain 3.nn  RobotBrain 30.nn  RobotBrain 31.nn  RobotBrain 4.nn  RobotBrain 5.nn  RobotBrain 6.nn  RobotBrain 7.nn  RobotBrain 8.nn  RobotBrain 9.nn  RobotBrain.nn  test 2.nn  test.nn  vai ser este.nn
assignment_3/ROBO/Assets/ML-Agents/: Sample.unity
assignment_3/ROBO/Assets/Materials/: Green.mat  Ice.mat  Orange.mat  (+2 more)
assignment_3/ROBO/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+9 files in other folders)
